--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,25 @@
 name: Continuous Integration
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '17', '19', '20' ]
-    name: Java ${{ matrix.Java }} sample
+        java: [ '17', '19' ]
+    name: Build with Java ${{ matrix.Java }}
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup java
-        uses: actions/setup-java@v3
+      - name: "Checkout sources"
+        uses: actions/checkout@v3
+      - name: "Setup Java"
+        uses: actions/setup-java@main
         with:
-          distribution: 'zulu'
+          distribution: 'oracle'
           java-version: ${{ matrix.java }}
-      - name: build
-        run: mvn -B package
+      - name: "Build"
+        run: java build.java
