--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
       - name: "Checkout sources"
         uses: actions/checkout@v3
       - name: "Setup Java"
-        uses: actions/setup-java@main
+        uses: oracle-actions/setup-java@v1
         with:
-          distribution: 'oracle'
-          java-version: ${{ matrix.java }}
+          website: oracle.com
+          release: ${{ matrix.java }}
       - name: "Build"
         run: java build/build.java
