--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '17', '19' ]
+        java: [ '21' ]
     name: Build with Java ${{ matrix.Java }}
     steps:
       - name: "Checkout sources"
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: "Setup Java"
-        uses: oracle-actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          website: oracle.com
-          release: ${{ matrix.java }}
+          distribution: 'oracle'
+          java-version: ${{ matrix.java }}
       - name: "Build"
         run: java build/build.java
